# connect-four-solver

./: Cargo.toml  README.md
.github/workflows/: build.yml  release.yml
precalculate/: Cargo.toml
precalculate/src/: main.rs
src/: bitboard.rs  lib.rs  main.rs  precalculated.rs  solver.rs  transposition_table.rs
tests/: convinience.rs  integration.rs
