[package]
name = "connect-four-solver"
version = "0.2.0"
edition = "2021"
description = "A strong and perfect connect four solver in Rust"
repository = "https://github.com/pacman82/connect-four-solver/"
license = "AGPL-3.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[workspace]
members = ["precalculate"]

[profile.release]
# Panics should only be caused by logic errors and are considered bugs
panic = 'abort'
# Link time Optimization
lto = true
